# audio-scholar

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
scripts/: init_db.py  refresh_citations.py
src/audio_scholar/: __init__.py  config.py  logging.py
src/audio_scholar/db/: __init__.py  connection.py  crud.py  models.py  schema.sql
tests/: __init__.py  conftest.py  test_config.py
tests/test_db/: test_connection.py  test_crud.py  test_models.py
