[project]
name = "audio-scholar"
version = "0.1.0"
description = "RAG system for conversational search over audio ML research papers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Pierre-Amaury Grumiaux" }
]
keywords = ["rag", "audio", "machine-learning", "research", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (always needed)
dependencies = [
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Phase 1: PDF Processing
pdf = [
    "PyMuPDF>=1.23.0",
]

# Phase 3: Embeddings
embeddings = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
]

# Phase 4: LLM/RAG
llm = [
    "ollama>=0.1.0",
]

# ML/Data processing
ml = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

# Development/Testing
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# All dependencies (for full installation)
all = [
    "audio-scholar[pdf,embeddings,llm,ml,dev]",
]

[project.urls]
Repository = "https://github.com/your-username/audio-scholar"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_scholar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.coverage.run]
source = ["src/audio_scholar"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
